--- a/build.yaml
+++ b/build.yaml
@@ -16,6 +16,8 @@
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
 #
+# https://www.nologo.tech/product/otherboard/NRF52840.html
+#
 ---
 include:
   - board: nice_nano_v2
@@ -28,14 +30,14 @@ include:
     artifact-name: corne_right-nice_view-nice_nano_v2-zmk
   - board: nice_nano_v2
     shield: settings_reset
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: corne_left
     cmake-args: -D'CONFIG_ZMK_KEYBOARD_NAME="Corne NRF52840"'
     artifact-name: corne_left-nrf52840-zmk
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: corne_right
     cmake-args: -D'CONFIG_ZMK_KEYBOARD_NAME="Corne NRF52840"'
     artifact-name: corne_right-nrf52840-zmk
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: settings_reset
     artifact-name: settings_reset-nrf52840-zmk
