move shield files to external repo

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,16 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: s6t
+      url-base: https://github.com/s6t
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: zmk-shield-nice-view-cats
+      remote: s6t
+      revision: main
+      path: config/boards/shields/nice_view_cats
   self:
     path: config
