--- a/build.yaml
+++ b/build.yaml
@@ -21,23 +21,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view_custom
-    cmake-args: -D'CONFIG_ZMK_KEYBOARD_NAME="Corne nice!nano"'
-    artifact-name: corne_left-nice_view_custom-nice_nano_v2-zmk
+    shield: corne_left nice_view_adapter nice_view_cats
+    artifact-name: corne_left-nice_view_cats-nice_nano_v2-zmk
   - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_view_custom
-    cmake-args: -D'CONFIG_ZMK_KEYBOARD_NAME="Corne nice!nano"'
-    artifact-name: corne_right-nice_view_custom-nice_nano_v2-zmk
+    shield: corne_right nice_view_adapter nice_view_cats
+    artifact-name: corne_right-nice_view_cats-nice_nano_v2-zmk
   - board: nice_nano_v2
     shield: settings_reset
-  - board: nice_nano_v2
-    shield: corne_left
-    cmake-args: -D'CONFIG_ZMK_KEYBOARD_NAME="Corne NRF52840"'
-    artifact-name: corne_left-nrf52840-zmk
-  - board: nice_nano_v2
-    shield: corne_right
-    cmake-args: -D'CONFIG_ZMK_KEYBOARD_NAME="Corne NRF52840"'
-    artifact-name: corne_right-nrf52840-zmk
-  - board: nice_nano_v2
-    shield: settings_reset
-    artifact-name: settings_reset-nrf52840-zmk
