update build config

--- a/config/west.yml
+++ b/config/west.yml
@@ -1,17 +1,17 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
     - name: s6t
       url-base: https://github.com/s6t
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: s6t
       revision: main
       import: app/west.yml
+    - name: zmk-locales
+      remote: s6t
+      revision: main
     - name: zmk-shield-nice-view-cats
       remote: s6t
       revision: main
-      path: config/boards/shields/nice_view_cats
   self:
     path: config
